--- a/core/view/form/FormElement_DatabaseRelation.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation.tmpl
@@ -3,7 +3,7 @@
 {block name="field"}
 
 <div class="foreignRecordsActionControll overflow">
-	{Button label="form.records.add" alt="form.records.add" class="addForeignRecord" id="add-record" onclick="Todoyu.Form.addRecord($idRecord, '$formname', '$fieldname', '$record.url.ext', '$record.url.controller')"}
+	{Button label=$addLabel alt="form.records.add" class="addForeignRecord" id="add-record" onclick="Todoyu.Form.addRecord($idRecord, '$formname', '$fieldname', '$record.url.ext', '$record.url.controller')"}
 	{if sizeof($records)}
 		{Button label="form.databaserelation.expandAllRecords" alt="form.databaserelation.expandAllRecords" class="expandAll" id="expand-all" onclick="Todoyu.Form.expandForeignRecords(['$fieldname'])"}
 	{/if}
