--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -54,7 +54,10 @@ input {}
 	}
 
 	input.textinputAC {
-		background:url(../img/icons.png) no-repeat right -718px;
+		background-image:url(../img/icons.png);
+		background-repeat:no-repeat;
+		background-position:right -718px;
+		background-color:#ecfeff;
 	}
 
 
