--- a/install/view/configs/db.php.tmpl
+++ b/install/view/configs/db.php.tmpl
@@ -20,7 +20,7 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-$CONFIG['DB'] = array(
+Todoyu::$CONFIG['DB'] = array(
 	'server'		=> '{$server}',
 	'username'		=> '{$username}',
 	'password'		=> '{$password}',
