--- a/install/view/configs/system.php.tmpl
+++ b/install/view/configs/system.php.tmpl
@@ -20,12 +20,12 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-$CONFIG['SYSTEM']['name'] 		= '{$name}';
-$CONFIG['SYSTEM']['email']		= '{$email}';
-$CONFIG['SYSTEM']['language']	= '{$language}';
-$CONFIG['SYSTEM']['locale']		= '{$locale}';
+Todoyu::$CONFIG['SYSTEM']['name'] 		= '{$name}';
+Todoyu::$CONFIG['SYSTEM']['email']		= '{$email}';
+Todoyu::$CONFIG['SYSTEM']['language']	= '{$language}';
+Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
 
-//$CONFIG['LOCALE']['defaultTimezone']= 'Europe/Zurich';
+//Todoyu::$CONFIG['LOCALE']['defaultTimezone']= 'Europe/Zurich';
 
-$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
+Todoyu::$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
 
