* timetracking headlet adapted * Spelling/Wording improved * killed zebras

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -261,7 +261,7 @@ input, textarea, select {
 fieldset {}
 
 	fieldset div.odd {
-		background-color:#ffffff;
+		/*background-color:#ffffff;*/
 	}
 
 	fieldset div.even {}
