* Task 1137.954 - Optimized markup and css of task templates * Task 1137.907 - Optimized autocompleter styling

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -56,8 +56,9 @@ input {}
 	input.textinputAC {
 		background-image:url(../img/icons.png);
 		background-repeat:no-repeat;
-		background-position:right -718px;
-		background-color:#ecfeff;
+		background-position: 5px -809px;
+		background-color: #e3eace;
+		text-indent: 25px;
 	}
 
 
