* Task 1137.1077 * Optimized form error styling

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -337,15 +337,11 @@ fieldset {}
 	float:left;
 }
 
-
-form div.error .fLabel label,
+form .fElement.error .fLabel label,
 form div.error .fField span.errorMessage {
 	color:red;
 	font-style:italic;
-	white-space:nowrap;
 }
-
-
 
 	/* --- left floating radio --- */
 /*
