--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -1,5 +1,5 @@
 <div id="formElement-{$htmlId}" class="fElement {$containerClass} {$class} {if $odd}odd{else}even{/if} {if $error}error{/if} {if $wizard.hasWizard}hasWizard{/if}" {if $style}style="{$style}"{/if}>
-	<div id="formElement-{$htmlId}-labelbox" class="fLabel {if $required}required{/if}">
+	<div id="formElement-{$htmlId}-labelbox" class="fLabel {if $required}required{/if} {if $error}error{/if}">
 		<label for="{$htmlId}" id="{$htmlId}-label">{Label $label}</label>
 		{if $required}<span class="required">*</span>{/if}
 	</div>
