--- a/core/assets/css/contextmenu.css
+++ b/core/assets/css/contextmenu.css
@@ -35,7 +35,7 @@
 		}
 
 		#contextmenu li.header a {
-			padding:0px 5px;
+			padding:0 5px;
 			font-weight:bold;
 			background-color:#4F8AB4 !important;
 			color:#FFF;
