--- a/core/assets/css/compatibility/ie8.css
+++ b/core/assets/css/compatibility/ie8.css
@@ -1,5 +1,5 @@
 .acResultContainer {
 	position:relative !important;
-	top:0px !important;
-	left:0px !important;
+	top:0 !important;
+	left:0 !important;
 }
