--- a/core/lib/js/jscalendar/jscalendar.css
+++ b/core/lib/js/jscalendar/jscalendar.css
@@ -71,7 +71,7 @@ div.calendar {
 
 .calendar thead .active { /* Active (pressed) buttons in header */
 	background-color: #77c;
-	padding: 2px 0px 0px 2px;
+	padding: 2px 0 0 2px;
 }
 
 /* The body part -- contains all the days in month. */
@@ -112,7 +112,7 @@ div.calendar {
 
 .calendar tbody td.active { /* Active (pressed) cells <TD> */
 	background: #cde;
-	padding: 2px 2px 0px 2px;
+	padding: 2px 2px 0 2px;
 }
 
 .calendar tbody td.selected { /* Cell showing today date */
@@ -171,7 +171,7 @@ div.calendar {
 
 .calendar tfoot .active { /* Active (pressed) style for buttons in footer */
 	background: #77c;
-	padding: 2px 0px 0px 2px;
+	padding: 2px 0 0 2px;
 }
 
 /* Combo boxes (menus that display months/years for direct selection) */
@@ -179,8 +179,8 @@ div.calendar {
 .calendar .combo {
 	position: absolute;
 	display: none;
-	top: 0px;
-	left: 0px;
+	top: 0;
+	left: 0;
 	width: 4em;
 	cursor: default;
 	border: 1px solid #655;
@@ -213,7 +213,7 @@ div.calendar {
 
 .calendar td.time {
 	border-top: 1px solid #000;
-	padding: 1px 0px;
+	padding: 1px 0;
 	text-align: center;
 	background-color: #f4f0e8;
 }
@@ -221,7 +221,7 @@ div.calendar {
 .calendar td.time .hour,
 .calendar td.time .minute,
 .calendar td.time .ampm {
-	padding: 0px 3px 0px 4px;
+	padding: 0 3px 0 4px;
 	border: 1px solid #889;
 	font-weight: bold;
 	background-color: #fff;
@@ -232,7 +232,7 @@ div.calendar {
 }
 
 .calendar td.time .colon {
-	padding: 0px 2px 0px 3px;
+	padding: 0 2px 0 3px;
 	font-weight: bold;
 }
 
