--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -13,7 +13,8 @@ ul#navi-main-list {
 
 ul#navi-main-list li {
 	float:left;
-	background:url('../img/rounded-box01.png') 100% 0;
+	background-image:url('../img/rounded-box01.png');
+    background-position:100% 0;
 	margin-right:3px;
 }
 
