* visual fixes in installer

--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -23,7 +23,10 @@
 				{$progress}
 
 				<div class="panelWidget">
-					<h1><span class="title">Todoyu 2.0</span><span class="rgt"></span></h1>
+					<h1 class="deniedOpen">
+						<span class="title">Todoyu 2.0</span>
+						<span class="rgt"></span>
+					</h1>
 					<img src="assets/img/banner.jpg">
 				</div>
 			</div>
