* optimized formPerson styling * restored headerLine

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -515,6 +515,7 @@ form .formtrigger {
 	font-weight:bold;
 }
 
-form.formGeneral {
-	padding:10px 0 0 0;
+form.formGeneral,
+form.formPerson {
+	padding-top:10px;
 }
