--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -1,6 +1,6 @@
 form {
 	margin:0;
-	padding:0 0 0 0;
+	padding:0;
 }
 	* html form {height:1%}
 
@@ -109,6 +109,7 @@ select {
 
 	select option{
 	text-transform:none;
+	padding-left: 5px;
 }
 
 	select optgroup {
@@ -516,6 +517,8 @@ form .formtrigger {
 }
 
 form.formGeneral,
-form.formPerson {
+form.formPerson,
+form.formRecord,
+form.formRightseditor {
 	padding-top:10px;
 }
