--- a/core/view/headlet-menu.tmpl
+++ b/core/view/headlet-menu.tmpl
@@ -1,7 +1,7 @@
 <!-- <ul id="{$id}-menu"> -->
 	{foreach $items item}
 		<li class="item{ucfirst($item.id)} {$item.class}">
-			<a id="{$id}-item-{$item.id}">{Label $item.label}</a>
+			<a class="{$id}-item-{$item.id}">{Label $item.label}</a>
 		</li>
 	{/foreach}
 <!-- </ul> -->
