--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -4,4 +4,9 @@
 
 #headlet-quickcreate-content li.primary {
 	border-bottom:1px solid #b9bbad;
+	background-color: #edf0df;
+}
+
+#headlet-quickcreate-content li.primary a:hover {
+	background-color: white !important;
 }
