* fixed startTracking icon - was not displayed

--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -3,7 +3,7 @@
 }
 
 #headlet-quickcreate-content li.primary {
-	border-bottom:1px solid #b9bbad;
+	border-bottom:1px dotted #b9bbad;
 	background-color: #edf0df;
 }
 
