--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -3,8 +3,12 @@
 }
 
 #headlet-quickcreate-content li.primary {
-	border-bottom:1px dotted #b9bbad;
+	border-bottom:1px solid #b9bbad;
 	background-color: #edf0df;
+}
+
+#headlet-quickcreate-content li.primary a {
+	border-bottom: 1px solid white !important;
 }
 
 #headlet-quickcreate-content li.primary a:hover {
