* Added static timezone table * Added custom parameter to form hook handling * Custom hook parameter is parent field for db-rel-records * Added timezone functions for address and person * Init timezone on load * Removed timezone manager * Installer fixes

--- a/core/view/button.tmpl
+++ b/core/view/button.tmpl
@@ -1,4 +1,4 @@
-<button type="{$type|default:button}" class="button {$class}" onclick="{$onclick}" title="{if $title}{Label $title}{else}{Label $label}{/if}">
+<button type="{$type|default:button}" {if $id}id="{$id}"{/if} class="button {$class}" onclick="{$onclick}" title="{if $title}{Label $title}{else}{Label $label}{/if}">
 	<span class="icon"></span>
 	<span class="label">{Label $label}</span>
 	<span class="rgt"></span>
