--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -4,13 +4,14 @@
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
 	{if !isset($multiple) && !isset($noPleaseSelect)}
 		<option value="0">{Label form.select.pleaseSelect}</option>
+		<option value="0" disabled="disabled">---------------------------</option>
 	{/if}
 	{foreach $options label group}
 		{if $label != "none"}
 			<optgroup label="{$label}">
 		{/if}
 		{foreach $group option}
-			<option value="{htmlencode $option.value}"{if $option.classname != ""} class="{$option.classname}" {/if}{if inArray($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{$option.label}</option>
+			<option value="{htmlencode $option.value}" {if $option.classname != ""}class="{$option.classname}"{/if} {if inArray($option.value, $value)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
 		{/foreach}
 		{if $label != "none"}
 			</optgroup>
