* Added static timezone table * Added custom parameter to form hook handling * Custom hook parameter is parent field for db-rel-records * Added timezone functions for address and person * Init timezone on load * Removed timezone manager * Installer fixes

--- a/install/assets/css/installer.css
+++ b/install/assets/css/installer.css
@@ -66,6 +66,10 @@ p.installMessage.info {
 }
 
 
+select#database option.disabled {
+	color:#CCC;
+}
+
 
 /* -----------------------------------
 	Panel: steps of installation
