--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -8,13 +8,13 @@
 			</tr><tr>
 				<td id="passwordLabel">{Label installer.adminpassword.password} *</td>
 				<td>
-					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" value="" />
+					<input onkeyup="Todoyu.Installer.validatePasswordRepetition()" type="password" name="password" id="password" value="" />
 					({Label installer.adminpassword.passwordHint})
 				</td>
 			</tr><tr>
 				<td id="passwordConfirmLabel">{Label installer.adminpassword.repeatPassword} *</td>
 				<td>
-					<input type="password" name="password_confirm" value="" id="password_confirm" onkeyup="TodoyuInstaller.validatePasswordRepetition()" />
+					<input type="password" name="password_confirm" value="" id="password_confirm" onkeyup="Todoyu.Installer.validatePasswordRepetition()" />
 				</td>
 			</tr>
 		</table>
