--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -54,7 +54,7 @@
 							{* ----------- Submit: goto next step -------- *}
 
 							{if $stop !== true }
-								{Button label=$button type="submit"}
+								{Button label=$button type="submit" id="next"}
 							{/if}
 						</form>
 						<br />
