--- a/core/assets/css/layout.css
+++ b/core/assets/css/layout.css
@@ -101,6 +101,10 @@ body {
 	left:0;
 	*/
 }
+#todoyu-loginpage #right span.lt {
+	display: block !important;
+}
+
 #right span.rt {
 	top:0;
 	right:0;
