* completely new styling for headlet timetracking

--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -4,6 +4,10 @@
 
 #headlet-quickcreate-content li.primary {
 	border-bottom:1px solid #b9bbad;
+	background-color: white;
+}
+
+#headlet-quickcreate-content li {
 	background-color: #edf0df;
 }
 
@@ -11,6 +15,6 @@
 	border-bottom: 1px solid white !important;
 }
 
-#headlet-quickcreate-content li.primary a:hover {
+#headlet-quickcreate-content li a:hover {
 	background-color: white !important;
 }
