* modified drop shadow for main navigation * modified styles of headlet timetracking

--- a/core/assets/css/navi.css
+++ b/core/assets/css/navi.css
@@ -14,7 +14,7 @@ ul#navi-main-list {
 ul#navi-main-list li {
 	float:left;
 	background-image:url('../img/rounded-box01.png');
-    background-position:100% 0;
+	background-position:100% 0;
 	margin-right:3px;
 }
 
@@ -33,7 +33,6 @@ ul#navi-main-list li a {
 	white-space:nowrap;
 	background-image:url('../img/shadow.png');
 	background-position:50% 100%;
-
 }
 
 ul#navi-main-list li a span.lt {
@@ -71,12 +70,14 @@ ul#navi-main-list li ul {
 	position:absolute;
 	top:29px;
 	left:-9999px;
+	z-index: 1;
 	width:200px !important;
 	margin-top:1px;
 	text-transform:none;
-	-webkit-box-shadow: 5px 5px 7px #999;
-	-moz-box-shadow: 5px 5px 7px #999;
-	box-shadow: 5px 5px 7px #999;
+	clip:rect(0px, 207px, 207px, -7px);
+	-webkit-box-shadow: 2px 2px 5px #999;
+	-moz-box-shadow: 2px 2px 5px #999;
+	box-shadow: 2px 2px 5px #999;
 }
 
 ul#navi-main-list li ul li {
