--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -23,11 +23,17 @@
 				{$progress}
 
 				<div class="panelWidget">
+					<div class="panelwidgetContent">
 					<h1 class="deniedOpen">
 						<span class="title">Todoyu 2.0</span>
 						<span class="rgt"></span>
 					</h1>
 					<img src="assets/img/banner.jpg">
+					<p class="slogan">
+					Alle Reden von Todoyu &ndash;<br />
+					Ich nutze es.
+					</p>
+					</div>
 				</div>
 			</div>
 			{* ------------------- Panel end ------------- *}
